--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="vh" id="home">
 
       <!-- start navbar -->    
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black;">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: black;">
           <div class="container">
             <a class="navbar-brand text-main-color page-scroll" href="#home">Sidomulyo <span>Teknik</span> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
