change contact to location

--- a/index.html
+++ b/index.html
@@ -745,31 +745,17 @@
       </section>    
     <!-- end why-choose-us -->
 
-    <!-- start contact -->
-      <section id="contact">
+    <!-- start location -->
+      <section id="location">
         <div class="container">
-          <div class="row">
-
-            <div class="col-lg-7">
-              <div class="text">
-                <h1>Segera Hubungi Bengkel Las Sidomulyo Teknik, Kami Siap Melayani Anda</h1>
-              </div>
-            </div>
-
-            <div class="col-lg-5">
-              <h2>+62 877 2369 2860</h2>
-              <h3>ATAU</h3>
-              <a href="https://wa.me/6287723592860" target="_blank">
-                <button class="btn-jumbotron" type="button">
-                  Klik Disini
-                </button>
-              </a>
-            </div>
-
-          </div>
+          <h2>Lokasi</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.2610275186403!2d106.78474451424215!3d-6.360251995397523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ef59142da1f9%3A0xa4318d4b20f6f627!2sSidomulyo%20Tekhnik!5e0!3m2!1sid!2sid!4v1655949890020!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-100 mb-4"></iframe>
+          <center>
+            <a href="https://www.google.com/maps/place/Sidomulyo+Tekhnik/@-6.3603816,106.7846307,17z/data=!4m5!3m4!1s0x2e69ef59142da1f9:0xa4318d4b20f6f627!8m2!3d-6.360252!4d106.7869332" target="_blank" class="button">Lihat Maps</a>
+          </center>
         </div>
       </section>
-    <!-- end contact -->
+    <!-- end location -->
 
     <!-- start footer -->
       <section id="footer">
@@ -822,11 +808,10 @@
         </div>
         <div class="container-fluid">
           <div class="container">
-            &copy; 
-            <script>
-              document.write(new Date().getFullYear())
-            </script>
-            Sidumulyo Teknik
+            <h6 class="opacity-75">
+              &copy; <script>document.write(new Date().getFullYear())</script>
+              Sidumulyo Teknik - All rights reserved.
+            </h6>
           </div>
         </div>
       </section>
